--- a/index.qmd
+++ b/index.qmd
@@ -5,11 +5,7 @@ sidebar: false
 
 ## Welcome
 
-This is the course website for *Programming for Psychology and Neuroscience*, developed and taught by [Dr. Maureen Ritchey](https://www.thememolab.org/people/ritchey/) at Boston College. This course will be taught in Spring 2025.
-
-::: callout-caution
-This website is a work in progress.
-:::
+This is the course website for *Programming for Psychology and Neuroscience*, developed and taught by [Dr. Maureen Ritchey](https://www.thememolab.org/people/ritchey/) at Boston College. This course was taught in Spring 2025.
 
 ## Course description
 
