update course description

--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -10,7 +10,7 @@ sidebar: false
 
 ## Course description
 
-This course will provide an introduction to computer programming and its applications to psychology and neuroscience. The goal will be to provide you with the skillset to program experiments and data analyses, as well as an understanding of how these tools are used to facilitate modern research. We will begin with the basics of how to develop algorithms and implement them with programming logic. In a series of hands-on projects, students will learn to program web-based interactive experiments and to analyze psychology and neuroscience datasets using JavaScript and R. Additional topics will include data management, version control, strategies for code debugging, data visualization, and an introduction to machine learning and natural language processing techniques. This course is ideal for students with little to no programming experience, although prior training in statistics is strongly recommended.
+This course will provide an introduction to computer programming and its applications to psychology and neuroscience. The goal will be to provide you with the skillset to program experiments and data analyses, as well as an understanding of how these tools are used to facilitate modern research. We will begin with the basics of how to develop algorithms and implement them with programming logic. In a series of hands-on projects, students will learn to analyze psychology and neuroscience datasets using R. Additional topics will include data management, version control, strategies for code debugging, data visualization, and an introduction to machine learning and natural language processing techniques. This course is ideal for students with little to no programming experience, although prior training in statistics is strongly recommended.
 
 ## Course objectives
 
@@ -19,7 +19,7 @@ The primary objectives of this course are to:
 -   Understand key concepts in computer programming, such as how to develop an algorithm and how to implement it using programming logic.
 -   Learn how these tools may be used to facilitate psychology and neuroscience research.
 -   Develop skills in data science techniques, including data wrangling, visualization, and statistical analysis, and apply these skills to psychology and neuroscience datasets.
--   Develop skills in experiment programming and learn how to collect, process, analyze, and present primary research data.
+-   Learn how to process, analyze, and present primary research data.
 -   Communicate ideas about scientific research in oral, written, and visual forms.
 
 ## Assigned readings
