--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -45,7 +45,7 @@ In order to participate during class, you must bring a laptop with you. If you d
 ## Schedule
 
 | **Week** | **Date** | **Module** | **Description** |
-|:---------------:|:---------------:|-----------------|----------------------|
+|:---------------:|:---------------:|-----------------|---------------------|
 | 1 | Jan 16 | [Intro to Programming with R](modules/01_intro.html) | Installation and familiarization with R and RStudio interface; Data organization, reproducible scientific programming |
 | 2 | Jan 23 | [Programming Foundations Part 1](modules/02_programming-foundations-1.html) | Variables, vectors, loops, branches |
 | 3 | Jan 30 | [Programming Foundations Part 2](modules/03_programming-foundations-2.html) | Functions and algorithms |
@@ -57,7 +57,7 @@ In order to participate during class, you must bring a laptop with you. If you d
 | 9 | Mar 20 | [Data Tidying](modules/09_data-tidying.html) | What is "tidy" data and how do we get it; Working with fMRI data in R |
 | 10 | Mar 27 | [Statistical Analysis in R](modules/10_statistical-analysis.html) | Basic statistical analysis in R, including t-tests, ANOVAs, and regression analyses on sample datasets |
 | 11 | Apr 3 | [Intro to Machine Learning](modules/11_machine-learning.html) | Simple machine learning models for classifying psychological outcomes |
-| 12 | Apr 10 | [Intro to NLP](modules/12_nlp.html); Review | Interactive visualizations and web-based tools, visualization of complex data types |
+| 12 | Apr 10 | [Intro to NLP](modules/12_nlp.html); Review | Text processing in R; Sentiment analysis |
 | 13 | Apr 24 | Project Presentations | **Final projects due** |
 | 14 | May 1 | Project Presentations |  |
 
